<resources>
    <string name="app_name" translatable="false">Around shipper</string>
    <string name="profile">Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_facebook">log in with facebook</string>
    <string name="register_phone">register with phone number</string>
    <string name="copyright">© IPICorp</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="resend">Resend</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="find">is finding you ...</string>
    <string name="cancle">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try</string>
    <string name="success">Success</string>
    <string name="remind_otp">Please enter OTP number.</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_select">Please choose your service</string>
    <string name="pickup_delivery">Pickup &amp; delivery</string>
    <string name="gifting">Gifting</string>
    <string name="shopping">Shopping</string>
    <string name="estimation_cost">Estimation Cost</string>
    <string name="total_distance">Total distance</string>
    <string name="shipping_fee">Shipping fee</string>
    <string name="item_cost">Item cost</string>
    <string name="service_fee">Service fee</string>
    <string name="return_pickup">Return fee</string>
    <string name="total">Total</string>
    <string name="finish">Finish</string>
    <string name="your_receipt">Receipt</string>
    <string name="rate_us">Rate us now!</string>
    <string name="order_detail">Order detail</string>
    <string name="pickup_location">Return to pickup fee</string>
    <string name="isnote">Note</string>
    <string name="contact">Contact</string>
    <string name="status">Status</string>
    <string name="pay_here">Pay for shipper here</string>
    <string name="pickup_here">Pickup package here</string>
    <string name="difference_location">Your location is difference from ispickup location, please confirm</string>
    <string name="invalid_otp">Invalid OTP!</string>
    <string name="phone_number">Phone number</string>
    <string name="bike_number">Bike number</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="full_name">Full name</string>
    <string name="rating">Rating</string>
    <string name="distance">Distance</string>
    <string name="estimation_time">Estimation time</string>
    <string name="delivery_info">Delivery info</string>
    <string name="full_order">Full order</string>
    <string name="call">Call customer</string>
    <string name="chat">Chat with customer</string>
    <string name="arrival_time">Arrival time</string>
    <string name="receipt">Receipt</string>
    <string name="info">Info</string>
    <string name="history">History</string>
    <string name="income">Income</string>
    <string name="help">Help</string>
    <string name="id_number">ID Number</string>
    <string name="address">Address</string>
    <string name="order_history">Order history</string>
    <string name="successfully">Successfully</string>
    <string name="cancelled">Cancelled</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="monthly_order">Monthly order</string>
    <string name="daily_order">Daily order</string>
    <string name="today">Today</string>
    <string name="monthly">Monthly</string>
    <string name="back_to_pickup_location">Back to pickup location</string>
    <string name="item_name">Item name</string>
    <string name="recipient_name">Recipient\'s name</string>
    <string name="error">Error</string>
    <string name="your_gps_disabled">Your GPS seems to be disabled.</string>
    <string name="not_connected_to_internet">Not connected to Internet</string>
    <string name="update_profile">Update profile successfully</string>
    <string name="your_network_disable">The network connection is not stable, please review.</string>
    <string name="miss_order">You missed an order</string>
    <string name="cancel_order">Are you sure to cancel this order?</string>
    <string name="finish_order">Finished journey and start new one</string>
    <string name="language">Language</string>
    <string name="change_language">Change language</string>
    <string name="time_out">Time out</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="income_error">Date must be in a future asset period</string>
    <string name="enable_network">No Internet connection available. Please check your Wifi/3G</string>
    <string name="exit">Exit</string>
    <string name="setting">Setting</string>
    <string name="enable_location">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="start">Start</string>
    <string name="new1">New</string>
    <string name="time">Time</string>
    <string name="schedule_list">Scheduled list</string>
    <string name="my_schedule_list">Around orders</string>
    <string name="confirm_accept">You can not cancel the orders received</string>
    <string name="confirm_start">Start order now?</string>
    <string name="start_follow">Start delivery now ?</string>
    <string name="empty_all_schedule">There are no scheduled orders yet</string>
    <string name="empty_my_schedule">There are no scheduled orders yet</string>
    <string name="rating_info">Rating info</string>
    <string name="day">Day</string>
    <string name="order_id">Order ID</string>
    <string name="pay_on_behaft">Pay on behalf</string>
    <string name="disconnect_server">Connecting to server...</string>
    <string name="note">Note</string>
    <string name="notify_disconnect_content">Lost connection! Please check your Wifi/3G</string>
    <string name="shop_name">Shop name</string>
    <string name="status_rate">You haven\'t rating yet</string>
    <string name="accept">Accept</string>
    <string name="title_verify_code">Enter the receipt code to confirm completed and paid</string>
    <string name="invalid_verify_code">*Invalid receipt code, please re-enter</string>
    <string name="place_1">1st Location</string>
    <string name="place_2">2nd Location</string>
    <string name="place_3">3rd Location</string>
    <string name="transport">Transport</string>
    <string name="collect">COD</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_cost">Pay on behalf</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_destination">Enter destination</string>
    <string name="destination">Destination</string>
    <string name="location">Location</string>
    <string name="drop_location">Drop location</string>
    <string name="total_order_code">Total order cost</string>
    <string name="quantity">Quantity</string>
    <string name="gift_box">Gift box</string>
    <string name="cast">Cash</string>
    <string name="online_payment">Online payment</string>
    <string name="around_payment">Around pay</string>
    <string name="contact_name">Contact name</string>
    <string name="delivery_location">Delivery location</string>
    <string name="recieved_product_shop">Received product from the store</string>
    <string name="pay_now_1x5">Refund immediately ( x1.5 shipping fee )</string>
    <string name="reality_purchase">The reality purchase</string>
    <string name="reality_cod">The reality COD</string>
    <string name="prepare_product">Preparation time</string>
    <string name="vnd" translatable="false">VND</string>
    <string name="location_1">1st Location</string>
    <string name="location_2">2nd Location</string>
    <string name="location_3">3rd Location</string>
    <string name="input_real_purchase">Enter the reality purchase </string>
    <string name="error_bill_price">Please enter the amount</string>
    <string name="error_bill_image">Please add invoice images</string>
    <string name="invoice_image">Invoice images</string>
    <string name="shipper">Shipper</string>
    <string name="cancel_order_partner">Cancel</string>
    <string name="done_order_partner">Done</string>
    <string name="call_order_partner">Recipient</string>
    <string name="order_partner">Partner orders</string>
    <string name="nearest_location">Delivery location</string>
    <string name="recent_time">Delivery time</string>
    <string name="run_order_partner">Start</string>
    <string name="message_not_partner_order">You don\'t have any orders!</string>
    <string name="history_today">Orders in</string>
    <string name="all_history">Your all orders</string>
    <string name="order_cod">COD orders</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="num_of_order">Number of order</string>
    <string name="total_cod">Total COD</string>
    <string name="status_order">Status</string>
    <string name="address_receiver_order">Address receiver</string>
    <string name="around_wallet">Around pay</string>
    <string name="you_have_now">Now, you have</string>
    <string name="equivalent_VND">(Enquivalent VND)</string>
    <string name="wallet_info">Your Around wallet info</string>
    <string name="content">Content</string>
    <string name="location_get_order">Location get order</string>
    <string name="location_pay_order">Location pay order</string>
    <string name="notice">Notice</string>
    <string name="point_1">Point 1</string>
    <string name="point_2">Point 2</string>
    <string name="point_3">Point 3</string>
    <string name="point_4">Point 4</string>
    <string name="point_5">Point 5</string>
    <string name="point_6">Point 6</string>
    <string name="point_7">Point 7</string>
    <string name="point_8">Point 8</string>
    <string name="point_9">Point 9</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="key_name">name</string>
    <string name="cod_order_info">COD order information</string>
    <string name="return_to_pickup">Note - Return to pickup location</string>
    <string name="take_the_goods_at">Take the goods at:</string>
    <string name="contact_person">Contact</string>
    <string name="total_cash_on_delivery">Total cash on delivery</string>
    <string name="shopping_gifting">Shopping - Gifting</string>
    <string name="no_order_time">No orders in this time</string>
    <string name="partner">PARTNER</string>
    <string name="nearest_address">Nearest address</string>
    <string name="upcoming_delivery_time">Upcoming delivery time</string>
</resources>
