<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.nip.aroundshipper.Fragment.Dialog.VerifyCodeDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">


        <vn.nip.aroundshipper.Custom.CustomTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:text="@string/title_verify_code"
            android:textColor="@color/gray_600"
            android:textSize="16sp" />

        <vn.nip.aroundshipper.Custom.CustomEditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/border_verify_code"
            android:gravity="center"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/gray_900"
            android:textSize="24sp" />

        <vn.nip.aroundshipper.Custom.CustomTextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:text="@string/invalid_verify_code"
            android:textColor="@color/red_500"
            android:textSize="12sp"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <vn.nip.aroundshipper.Custom.CustomButton
                android:id="@+id/cancel"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <vn.nip.aroundshipper.Custom.CustomButton
                android:id="@+id/confirm"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_main"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:fontName="OpenSans_Light" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>
