<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_50"
    tools:context=".Fragment.OrderCODFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_close" />

        <LinearLayout
            android:id="@+id/ll_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/frame_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <vn.nip.aroundshipper.Custom.CustomTextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="@color/gray_500"
                        android:textSize="12sp"
                        app:fontName="OpenSans_SemiBold" />

                    <View
                        android:id="@+id/view_total"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="4dp"
                        android:background="@color/gray_400" />

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_successfully"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <vn.nip.aroundshipper.Custom.CustomTextView
                        android:id="@+id/successfully"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/successfully"
                        android:textColor="@color/gray_500"
                        android:textSize="12sp"
                        app:fontName="OpenSans_SemiBold" />

                    <View
                        android:id="@+id/view_success"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="4dp"
                        android:background="@color/gray_400" />

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_cancelled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <vn.nip.aroundshipper.Custom.CustomTextView
                        android:id="@+id/cancelled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelled"
                        android:textColor="@color/gray_500"
                        android:textSize="12sp"
                        app:fontName="OpenSans_SemiBold" />

                    <View
                        android:id="@+id/view_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="4dp"
                        android:background="@color/gray_400" />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="12dp">

                <vn.nip.aroundshipper.Custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/from_date"
                    android:textColor="@color/gray_600"
                    android:textSize="14sp"
                    app:fontName="OpenSans_SemiBold" />

                <FrameLayout
                    android:id="@+id/from_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/border_gray_400_radius">

                    <vn.nip.aroundshipper.Custom.CustomTextView
                        android:id="@+id/txt_from_date"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="22/06/2018"
                        android:textColor="@color/gray_600"
                        android:textSize="14sp"
                        app:fontName="OpenSans_Regular" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="12dp">

                <vn.nip.aroundshipper.Custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/to_date"
                    android:textColor="@color/gray_600"
                    android:textSize="14sp"
                    app:fontName="OpenSans_SemiBold" />

                <FrameLayout
                    android:id="@+id/to_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/border_gray_400_radius">

                    <vn.nip.aroundshipper.Custom.CustomTextView
                        android:id="@+id/txt_to_date"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="22/06/2018"
                        android:textColor="@color/gray_600"
                        android:textSize="14sp"
                        app:fontName="OpenSans_Regular" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/border_cod"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <vn.nip.aroundshipper.Custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="8dp"
                    android:text="@string/num_of_order"
                    android:textColor="@color/gray_700"
                    android:textSize="14sp"
                    app:fontName="OpenSans_Regular" />

                <vn.nip.aroundshipper.Custom.CustomTextView
                    android:id="@+id/txt_num_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="8dp"
                    android:text="50"
                    android:textColor="@color/gray_700"
                    android:textSize="14sp"
                    app:fontName="OpenSans_Regular" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <vn.nip.aroundshipper.Custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="8dp"
                    android:text="@string/total_cod"
                    android:textColor="@color/gray_700"
                    android:textSize="14sp"
                    app:fontName="OpenSans_Regular" />

                <vn.nip.aroundshipper.Custom.CustomTextView
                    android:id="@+id/txt_total_cod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="8dp"
                    android:text="50.000.000đ"
                    android:textColor="@color/gray_700"
                    android:textSize="14sp"
                    app:fontName="OpenSans_Regular" />

            </RelativeLayout>

        </LinearLayout>

        <vn.nip.aroundshipper.Custom.CustomTextView
            android:id="@+id/txt_no_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/no_order_time"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            app:fontName="OpenSans_Regular"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_frame_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_gray_400_radius_top"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <vn.nip.aroundshipper.Custom.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="8dp"
                android:text="@string/order_id"
                android:textColor="@color/main"
                android:textSize="11sp"
                app:fontName="OpenSans_Regular" />

            <vn.nip.aroundshipper.Custom.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/address_receiver_order"
                android:textColor="@color/main"
                android:textSize="11sp"
                app:fontName="OpenSans_Regular" />

            <vn.nip.aroundshipper.Custom.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="8dp"
                android:text="@string/status_order"
                android:textColor="@color/main"
                android:textSize="11sp"
                app:fontName="OpenSans_Regular" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"></android.support.v7.widget.RecyclerView>

    </LinearLayout>

</FrameLayout>